k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: os-service-deployment
  labels:
    app: os-service
    service: os
spec:
  replicas: 1
  selector:
    matchLabels:
      app: os-service
  template:
    metadata:
      labels:
        app: os-service
        service: os
      annotations:
        admission.datadoghq.com/enabled: "true"
    spec:
      containers:
        - name: os-service
          image: ghcr.io/aka-kensei/oficinafiap-os-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
