k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: os-service
spec:
  selector:
    app: os-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
  type: NodePort
